# Operating-Systems

./: .gitignore
Exercise 0/: CMakeLists.txt  README.md  answers.txt
Exercise 0/src/: error.c  fib.c  linked_list.c  multiply.c  multiply.h  net.c  substr.c
Exercise 1/: CMakeLists.txt  README.md
Exercise 1/src/: results.h  statistics.c  zombies.c
Exercise 2/: Answers.txt  CMakeLists.txt
Exercise 2/src/: resources.c
Exercise 3/: CMakeLists.txt
Exercise 3/src/: memory.c
